--- a/gallery.html
+++ b/gallery.html
@@ -9,5 +9,6 @@
 <body>
     <nav><a href="../index.html"></a></nav>
 <img src="../11/photo/cat.png" alt="">
+<img src="../11/photo/nature.jpg" alt="">
 </body>
 </html>
