--- a/gallery.html
+++ b/gallery.html
@@ -10,5 +10,6 @@
     <nav><a href="../index.html"></a></nav>
 <img src="../11/photo/cat.png" alt="">
 <img src="../11/photo/nature.jpg" alt="">
+<img src="../11/photo/mountain.jpg" alt="">
 </body>
 </html>
