--- a/gallery.html
+++ b/gallery.html
@@ -11,5 +11,6 @@
 <img src="../11/photo/cat.png" alt="">
 <img src="../11/photo/nature.jpg" alt="">
 <img src="../11/photo/mountain.jpg" alt="">
+<img src="../11/photo/NYC.jpg" alt="">
 </body>
 </html>
